# census-income-ds

./: README.md  pyproject.toml  run_pipeline.sh
data/outputs/: df_encoded.parquet  feat_imp.json
presentation/: Dataiku_Income_Analysis_Presentation.pptx
src/census-income-ds/: feature_engineering.py  globals.py  modelling.py  pipeline.py  pre_processing.py
